--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prisma-migrate": "prisma db push --skip-generate",
     "prisma-generate": "npx prisma generate",
-    "dev": "npm run prisma-generate && npm run prisma-migrate && next dev",
+    "dev": "npm run prisma-generate  && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -64,7 +64,9 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zsa": "^0.5.0",
+    "zsa-react": "^0.2.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
