--- a/package.json
+++ b/package.json
@@ -5,22 +5,24 @@
   "scripts": {
     "prisma-migrate": "prisma db push --skip-generate",
     "prisma-generate": "npx prisma generate",
-    "migrate": "prisma migrate dev",
-    "postmigrate": "npx @snaplet/seed sync",
     "dev": "npm run prisma-generate  && next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
-  },
-  "prisma": {
-    "seed": "tsx prisma/seed/seed.ts"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.614.0",
     "@aws-sdk/s3-request-presigner": "^3.614.0",
-    "@clerk/nextjs": "^5.2.2",
     "@hookform/resolvers": "^3.9.0",
     "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@node-rs/argon2": "^1.8.3",
+    "@node-rs/bcrypt": "^1.10.4",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.52.1",
+    "@opentelemetry/resources": "^1.25.1",
+    "@opentelemetry/sdk-node": "^0.52.1",
+    "@opentelemetry/sdk-trace-node": "^1.25.1",
+    "@opentelemetry/semantic-conventions": "^1.25.1",
     "@prisma/client": "^5.16.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -49,6 +51,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@radix-ui/themes": "^3.1.1",
+    "@vercel/otel": "^1.9.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -70,6 +74,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "types": "^0.1.1",
     "vaul": "^0.9.1",
     "zod": "^3.23.8",
     "zod-prisma-types": "^3.1.8",
@@ -78,20 +83,23 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "@snaplet/copycat": "^5.0.0",
-    "@snaplet/seed": "^0.97.20",
+    "@playwright/test": "^1.45.2",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.1.0",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "tsx": "^4.16.2",
-    "typescript": "^5"
-  },
-  "@snaplet/seed": {
-    "config": "prisma\\seed\\seed.config.ts"
+    "typescript": "^5",
+    "vitest": "^2.0.3"
   }
 }
