--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "jsx": "preserve",
     "incremental": true,
     "strictNullChecks": true,
+    "allowImportingTsExtensions": true,
     "plugins": [
       {
         "name": "next"
