--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -32,11 +32,12 @@ jobs:
           AWS_REGION: ${{ secrets.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          USERNAME: ${{ secrets.USERNAME }}
-          PASSWORD: ${{ secrets.PASSWORD }}
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps chromium
+        env:
+          USER_NAME: ${{ secrets.USER_NAME }}
+          PASSWORD: ${{ secrets.PASSWORD }}
       - name: Run Playwright tests
         run: npx playwright test
       - uses: actions/upload-artifact@v4
