--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.6",
+    "framer-motion": "^11.3.8",
     "input-otp": "^1.2.4",
     "lucia": "^3.2.0",
     "lucide-react": "^0.402.0",
@@ -104,6 +105,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^24.1.0",
     "postcss": "^8.4.39",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "tsx": "^4.16.2",
     "typescript": "^5",
