--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "lint": "next lint",
     "test": "vitest"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.614.0",
     "@aws-sdk/s3-request-presigner": "^3.614.0",
@@ -64,7 +67,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.6",
-    "framer-motion": "^11.3.8",
+    "framer-motion": "^11.3.19",
     "input-otp": "^1.2.4",
     "lucia": "^3.2.0",
     "lucide-react": "^0.402.0",
@@ -95,7 +98,7 @@
     "@prisma/extension-optimize": "^0.10.0",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
-    "@types/node": "^20",
+    "@types/node": "^20.14.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.3.1",
@@ -109,8 +112,9 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
+    "ts-node": "^10.9.2",
     "tsx": "^4.16.2",
-    "typescript": "^5",
+    "typescript": "^5.5.4",
     "vitest": "^2.0.3"
   }
 }
