--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "vitest",
+    "analyze": "ANALYZE=true next build"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -19,15 +20,9 @@
     "@aws-sdk/s3-request-presigner": "^3.614.0",
     "@hookform/resolvers": "^3.9.0",
     "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@next/bundle-analyzer": "^14.2.5",
     "@node-rs/argon2": "^1.8.3",
     "@node-rs/bcrypt": "^1.10.4",
-    "@opentelemetry/auto-instrumentations-node": "^0.48.0",
-    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.52.1",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.52.1",
-    "@opentelemetry/resources": "^1.25.1",
-    "@opentelemetry/sdk-node": "^0.52.1",
-    "@opentelemetry/sdk-trace-node": "^1.25.1",
-    "@opentelemetry/semantic-conventions": "^1.25.1",
     "@prisma/client": "^5.18.0",
     "@prisma/extension-accelerate": "^1.1.0",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -61,7 +56,7 @@
     "@upstash/ratelimit": "^2.0.1",
     "@vercel/kv": "^2.0.0",
     "@vercel/otel": "^1.9.1",
-    "ably": "^2.3.1",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -89,12 +84,9 @@
     "types": "^0.1.1",
     "vaul": "^0.9.1",
     "zod": "^3.23.8",
-    "zod-prisma-types": "^3.1.8",
-    "zsa": "^0.5.0",
-    "zsa-react": "^0.2.2"
+    "zod-prisma-types": "^3.1.8"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.45.2",
     "@prisma/extension-optimize": "^0.10.0",
     "@testing-library/jest-dom": "^6.4.6",
@@ -116,6 +108,7 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4",
-    "vitest": "^2.0.3"
+    "vitest": "^2.0.3",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
