Onboarding Branch Done and infinite scrollling is done in jobs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,8 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "react/no-unescaped-entities": "off"
+    ,
+    "react/display-name": [false, { "ignoreTranspilerName": false, "checkContextObjects": false }]
+
   }
 }
