--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@radix-ui/themes": "^3.1.1",
     "@upstash/ratelimit": "^2.0.1",
+    "@upstash/redis": "^1.34.0",
     "@vercel/kv": "^2.0.0",
     "@vercel/otel": "^1.9.1",
     "browser-image-compression": "^2.0.2",
@@ -69,6 +70,7 @@
     "lucide-react": "^0.402.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.14",
     "oslo": "^1.2.1",
     "prisma": "^5.18.0",
     "query-string": "^9.1.0",
@@ -76,6 +78,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-intersection-observer": "^9.13.0",
     "react-resizable-panels": "^2.0.20",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
@@ -88,7 +91,6 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.45.2",
-    "@prisma/extension-optimize": "^0.10.0",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@types/node": "^20.14.14",
