--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
     "tailwind.config.js",
     "prisma/**/*.ts",
     "src/**/*.ts" // adjust according to your project structure
-, "prisma/seed.js", "prisma/seedData.ts", "components/Chat/ChatBox.jsx"  ],
+, "prisma/seed.js", "prisma/seedData.ts", "components/Chat/ChatBox.jsx", "app/actions/email.action.js"],
   "exclude": ["node_modules"]
 }
