--- a/package.json
+++ b/package.json
@@ -57,23 +57,25 @@
     "@upstash/ratelimit": "^2.0.1",
     "@upstash/redis": "^1.34.0",
     "@vercel/kv": "^2.0.0",
-    "@vercel/otel": "^1.9.1",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "convex": "^1.14.4",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.6",
     "framer-motion": "^11.3.19",
     "input-otp": "^1.2.4",
+    "install": "^0.13.0",
     "lucia": "^3.2.0",
     "lucide-react": "^0.402.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
-    "nodemailer": "^6.9.14",
+    "npm": "^10.8.2",
     "oslo": "^1.2.1",
     "prisma": "^5.18.0",
+    "prisma-zod-generator": "^0.8.13",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -82,10 +84,10 @@
     "react-intersection-observer": "^9.13.0",
     "react-resizable-panels": "^2.0.20",
     "recharts": "^2.12.7",
+    "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "types": "^0.1.1",
     "vaul": "^0.9.1",
     "zod": "^3.23.8",
     "zod-prisma-types": "^3.1.8"
@@ -101,9 +103,6 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jsdom": "^24.1.0",
     "postcss": "^8.4.39",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
@@ -111,7 +110,6 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4",
-    "vitest": "^2.0.3",
     "webpack-bundle-analyzer": "^4.10.2"
   }
 }
