--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@radix-ui/themes": "^3.1.1",
+    "@react-pdf/renderer": "^3.4.4",
     "@upstash/ratelimit": "^2.0.1",
     "@upstash/redis": "^1.34.0",
     "@vercel/kv": "^2.0.0",
@@ -80,8 +81,9 @@
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.1",
+    "react-hook-form": "^7.53.0",
     "react-intersection-observer": "^9.13.0",
+    "react-pdf": "^9.1.0",
     "react-resizable-panels": "^2.0.20",
     "recharts": "^2.12.7",
     "sharp": "^0.33.5",
