--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "next-themes": "^0.3.0",
     "npm": "^10.8.2",
     "oslo": "^1.2.1",
+    "pdfjs-dist": "^4.5.136",
     "prisma": "^5.18.0",
     "prisma-zod-generator": "^0.8.13",
     "query-string": "^9.1.0",
