--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "npm": "^10.8.2",
+    "openai": "^4.57.0",
     "oslo": "^1.2.1",
     "pdfjs-dist": "^4.5.136",
     "prisma": "^5.18.0",
