--- a/package.json
+++ b/package.json
@@ -66,11 +66,12 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.6",
-    "framer-motion": "^11.3.19",
+    "framer-motion": "^11.3.31",
     "input-otp": "^1.2.4",
     "install": "^0.13.0",
     "lucia": "^3.2.0",
     "lucide-react": "^0.402.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "npm": "^10.8.2",
@@ -80,9 +81,9 @@
     "prisma": "^5.18.0",
     "prisma-zod-generator": "^0.8.13",
     "query-string": "^9.1.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-intersection-observer": "^9.13.0",
     "react-pdf": "^9.1.0",
@@ -90,7 +91,7 @@
     "recharts": "^2.12.7",
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
     "zod": "^3.23.8",
