--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,7 @@
     "pwshCode": true,
     "pwshGit": true
   },
-  "continue.telemetryEnabled": false
+  "continue.telemetryEnabled": false,
+  "continue.pauseCodebaseIndexOnStart": false,
+  "continue.pauseTabAutocompleteOnBattery": true
 }
