--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.614.0",
     "@aws-sdk/s3-request-presigner": "^3.614.0",
+    "@google/generative-ai": "^0.18.0",
     "@hookform/resolvers": "^3.9.0",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@monaco-editor/react": "^4.6.0",
@@ -55,6 +56,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@radix-ui/themes": "^3.1.1",
     "@react-pdf/renderer": "^3.4.4",
+    "@tabler/icons-react": "^3.16.0",
     "@upstash/ratelimit": "^2.0.1",
     "@upstash/redis": "^1.34.0",
     "@vercel/kv": "^2.0.0",
@@ -66,11 +68,12 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.6",
-    "framer-motion": "^11.3.31",
+    "framer-motion": "^11.5.4",
     "input-otp": "^1.2.4",
     "install": "^0.13.0",
     "lucia": "^3.2.0",
     "lucide-react": "^0.402.0",
+    "mermaid": "^11.2.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
