--- a/package.json
+++ b/package.json
@@ -85,12 +85,14 @@
     "prisma-zod-generator": "^0.8.13",
     "query-string": "^9.1.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-intersection-observer": "^9.13.0",
     "react-pdf": "^9.1.0",
     "react-resizable-panels": "^2.0.20",
+    "react-use": "^17.5.1",
     "recharts": "^2.12.7",
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
